Fix landing page layout issue on small devices

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -30,6 +30,8 @@
 
     margin-top: 0;
     margin-bottom: 5px;
+
+    text-align: center;
 }
 
 .view-sample-button {
